vpc.tf
#creation of vpc
resource "aws_vpc" "lms" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
  instance_tenancy     = "default"

  tags = {
    Name = "lms"
  }
}
